update research projects

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 
 <h2 id="briefly">Briefly</h2>
 
-<p>TESTTTTT Since 2015, I am a research engineer in Computer Science at <a href="https://objetsconnectes.wp.mines-telecom.fr/">RSOC</a>
+<p>Since 2015, I am a research engineer in Computer Science at <a href="https://objetsconnectes.wp.mines-telecom.fr/">RSOC</a>
 (Chaire Réseaux Sociaux et Objets Connectés ), <a href="http://www.telecom-em.eu/">Télécom Ecole de Management</a> in Evry and Paris. Between 2013 and 2015 I was a Postdoc at <a href="http://www.lurpa.ens-cachan.fr/">LURPA</a>, <a href="http://www.ens-cachan.fr/">Ecole Normale Supérieure de Cachan</a>. I received my PhD in 2013 from <a href="https://www.univ-paris13.fr/">Université Paris 13</a>, where I worked in <a href="http://lipn.univ-paris13.fr/en/a3-presentation">A3</a> team of <a href="http://lipn.univ-paris13.fr/en/">LIPN</a>.</p>
 
 <p>I teach Probability, Statistics and Machine Learning at <a href="http://www.esilv.fr/">École supérieure d’ingénieurs Léonard-de-Vinci</a> since 2014. During my PhD I teached Probability, Statistics, C language and Relational databases at <a href="https://www.univ-paris13.fr/">Université Paris 13</a>.</p>
