--- a/research/projects/index.html
+++ b/research/projects/index.html
@@ -52,19 +52,7 @@
   
 
    
-  <meta property="og:description" content="## Projects
-
-### Curated Media
-
-### Sodatech
-
-### Open Food System
-
-### ANGEL
-
-### COCLICO
-
-">
+  <meta property="og:description" content="## Projects ### Curated Media Projet FUI 17. Projet de plateforme de qualification de données issues du web à grande échelle. Ce projet est en partenariat avec Linkfluence, Intercloud, CEA list, Tigerlily, youmag. ### Sodatech Création d’une plateforme de Big Data pour faire du monitoring et établir des mesures des...">
   
 
 
@@ -90,19 +78,7 @@
   
 
   
-  <meta name="twitter:description" content="## Projects
-
-### Curated Media
-
-### Sodatech
-
-### Open Food System
-
-### ANGEL
-
-### COCLICO
-
-">
+  <meta name="twitter:description" content="## Projects ### Curated Media Projet FUI 17. Projet de plateforme de qualification de données issues du web à grande échelle. Ce projet est en partenariat avec Linkfluence, Intercloud, CEA list, Tigerlily, youmag. ### Sodatech Création d’une plateforme de Big Data pour faire du monitoring et établir des mesures des...">
   
 
   
@@ -267,14 +243,31 @@
 
 <h3 id="curated-media">Curated Media</h3>
 
+<p>Projet FUI 17. Projet de plateforme de qualification de données issues du web à grande échelle.
+Ce projet est en partenariat avec Linkfluence, Intercloud, CEA list, Tigerlily, youmag.</p>
+
 <h3 id="sodatech">Sodatech</h3>
+
+<p>Création d’une plateforme de Big Data pour faire du monitoring et établir des mesures des réseaux
+sociaux en temps réel. Création d’un outil de visualisation dynamique et interactive des réseaux
+sociaux. Ce projet regroupe trois partenaires : IMT, 1000Mercis, ENS Cachan.</p>
 
 <h3 id="open-food-system">Open Food System</h3>
 
+<p>Projet de recherche porté par SEB autour de la transformation digitale du secteur de la cuisine,
+qui regroupe vingt partenaires industriels et laboratoires de recherche.</p>
+
 <h3 id="angel">ANGEL</h3>
+
+<p>Projet FUI 14 ANGEL (Atelier Numérique coGnitif intEropérable et agiLe) co-labellisé par les
+pôles SYSTEMATIC PARIS REGION, VIAMECA et ASTECH, a pour objectif de développer un
+système logiciel pour l’Industrialisation Optimisée Intelligente de l’Usinage.</p>
 
 <h3 id="coclico">COCLICO</h3>
 
+<p>Coclico est un projet de recherche ANR visant à étudier et proposer une méthode générique
+innovante permettant une analyse multi-échelle de grands volumes de données spatio-temporelles
+fournies en continue de qualité très variable.</p>
 
 	    
     </div>
