--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
-  <title>Hi, I'm Mohamad</title>
+  <title>Mohamad Ghassany</title>
 
   <meta name="author" content="Mohamad Ghassany" />
 
@@ -50,7 +50,7 @@
   
 
   
-  <meta property="og:title" content="Hi, I'm Mohamad" />
+  <meta property="og:title" content="Mohamad Ghassany" />
   
 
    
@@ -76,7 +76,7 @@
   <meta name="twitter:creator" content="@m_ghass" />
 
   
-  <meta name="twitter:title" content="Hi, I'm Mohamad" />
+  <meta name="twitter:title" content="Mohamad Ghassany" />
   
 
   
@@ -224,7 +224,7 @@
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
         <div class="page-heading">
-          <h1>Hi, I'm Mohamad</h1>
+          <h1>Mohamad Ghassany</h1>
 		  
 		    
             <hr class="small">
