--- a/404.html
+++ b/404.html
@@ -113,8 +113,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="http://mghassany.github.io">Mohamad Ghassany</a>
-    </div>
+<!--       remove navbar-brand to remove name in order to put photo on left
+ --><!--       <a class="navbar-brand" href="http://mghassany.github.io">Mohamad Ghassany</a>
+ -->    </div>
 
     <div class="collapse navbar-collapse" id="main-navbar">
       <ul class="nav navbar-nav navbar-right">
@@ -128,7 +129,7 @@
 
 
 
-<a href="/">Home</a>
+<a href="/">About me</a>
 
           </li>
         
