--- a/bibliography/mybiblio/index.html
+++ b/bibliography/mybiblio/index.html
@@ -52,7 +52,7 @@
   
 
    
-  <meta property="og:description" content="References ========== @conference{ Ghassany-ijcnn13, file = {/bibliography/files/These_Mohamad_Ghassany.pdf}, author = &quot;Mohamad Ghassany and Nistor Grozavu and Younes Bennani&quot;, booktitle = &quot;{The 2013 International Joint Conference on Neural Networks, IJCNN13, Dallas, USA}&quot;, title = &quot;{Collaborative Multi-View Clustering}&quot;, year = &quot;2013&quot; } @conference{ Ghassany12-iconip, file = {/bibliography/files/These_Mohamad_Ghassany.pdf}, author = &quot;Mohamad Ghassany and Nistor...">
+  <meta property="og:description" content="References ========== @conference{ Ghassany-ijcnn13, file = {/bibliography/files/ghassany-ijcnn-13.pdf}, author = &quot;Mohamad Ghassany and Nistor Grozavu and Younes Bennani&quot;, booktitle = &quot;{The 2013 International Joint Conference on Neural Networks, IJCNN13, Dallas, USA}&quot;, title = &quot;{Collaborative Multi-View Clustering}&quot;, year = &quot;2013&quot; } @conference{ Ghassany12-iconip, file = {/bibliography/files/ghassany-iconip-12.pdf}, author = &quot;Mohamad Ghassany and Nistor...">
   
 
 
@@ -78,7 +78,7 @@
   
 
   
-  <meta name="twitter:description" content="References ========== @conference{ Ghassany-ijcnn13, file = {/bibliography/files/These_Mohamad_Ghassany.pdf}, author = &quot;Mohamad Ghassany and Nistor Grozavu and Younes Bennani&quot;, booktitle = &quot;{The 2013 International Joint Conference on Neural Networks, IJCNN13, Dallas, USA}&quot;, title = &quot;{Collaborative Multi-View Clustering}&quot;, year = &quot;2013&quot; } @conference{ Ghassany12-iconip, file = {/bibliography/files/These_Mohamad_Ghassany.pdf}, author = &quot;Mohamad Ghassany and Nistor...">
+  <meta name="twitter:description" content="References ========== @conference{ Ghassany-ijcnn13, file = {/bibliography/files/ghassany-ijcnn-13.pdf}, author = &quot;Mohamad Ghassany and Nistor Grozavu and Younes Bennani&quot;, booktitle = &quot;{The 2013 International Joint Conference on Neural Networks, IJCNN13, Dallas, USA}&quot;, title = &quot;{Collaborative Multi-View Clustering}&quot;, year = &quot;2013&quot; } @conference{ Ghassany12-iconip, file = {/bibliography/files/ghassany-iconip-12.pdf}, author = &quot;Mohamad Ghassany and Nistor...">
   
 
   
@@ -225,13 +225,13 @@
 
 <p>Ghassany, M., Grozavu, N., &amp; Bennani, Y. (2012). Collaborative Generative Topographic Mapping. In <i>Neural Information Processing: 19th International Conference, ICONIP 2012, Doha, Qatar</i>.</p>
 
-<p>Ghassany, M., Grozavu, N., &amp; Bennani, Y. (2012). Collaborative Clustering Using Prototype-Based Techniques. <i>International Journal of Computational Intelligence and Applications</i>, <i>11</i>. Retrieved from http://www.worldscientific.com/doi/abs/10.1142/S1469026812500174</p>
+<p>Ghassany, M., Grozavu, N., &amp; Bennani, Y. (2012). Collaborative Clustering Using Prototype-Based Techniques. <i>International Journal Of Computational Intelligence and Applications</i>, <i>11</i>. Retrieved from http://www.worldscientific.com/doi/abs/10.1142/S1469026812500174</p>
 
 <p>Grozavu, N., Ghassany, M., &amp; Bennani, Y. (2011). Learning confidence exchange in Collaborative Clustering. In <i>The 2011 International Joint Conference on Neural Networks, IJCNN11, San Jose, CA, USA</i>.</p>
 
 <p>Ghassany, M. (2013). <i>Contributions to Collaborative Clustering</i> (PhD thesis).</p>
 
-<p>Ghassany, M., &amp; Bennani, Y. (2015). Collaborative Fuzzy Clustering of Variational Bayesian Generative Topographic Mapping. <i>International Journal of Computational Intelligence and Applications</i>, <i>14</i>. Retrieved from http://www.worldscientific.com/doi/abs/10.1142/S1469026815500017</p>
+<p>Ghassany, M., &amp; Bennani, Y. (2015). Collaborative Fuzzy Clustering of Variational Bayesian Generative Topographic Mapping. <i>International Journal Of Computational Intelligence and Applications</i>, <i>14</i>. Retrieved from http://www.worldscientific.com/doi/abs/10.1142/S1469026815500017</p>
 
 <p>Grozavu, N., Ghassany, M., &amp; Bennani, Y. (2011). Apprentissage de la confiance des échanges en classification collaborative non supervisée. In <i>7e Plateforme AFIA, Association Française pour l’Intelligence Artificielle, Chambéry, 16 au 20 mai 2011</i> (p. 217). Editions Publibook.</p>
 
