--- a/teaching/index.html
+++ b/teaching/index.html
@@ -52,7 +52,7 @@
   
 
    
-  <meta property="og:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. * Statistical inference. * Probabilities 2. * Probabilities 1. * Probabilities &amp; Statistics. ## Université Paris 13 ### 2010--2014 * Data mining, Master 1. * Probabilities &amp; Statistics, Master 1. * Introduction to programming, C language....">
+  <meta property="og:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. ([Course](../ML_course/index.html)) * Statistical inference. * Probabilities 2. * Probabilities 1. * Probabilities &amp; Statistics. ## Université Paris 13 ### 2010--2014 * Data mining, Master 1. * Probabilities &amp; Statistics, Master 1. * Introduction to programming, C...">
   
 
 
@@ -78,7 +78,7 @@
   
 
   
-  <meta name="twitter:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. * Statistical inference. * Probabilities 2. * Probabilities 1. * Probabilities &amp; Statistics. ## Université Paris 13 ### 2010--2014 * Data mining, Master 1. * Probabilities &amp; Statistics, Master 1. * Introduction to programming, C language....">
+  <meta name="twitter:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. ([Course](../ML_course/index.html)) * Statistical inference. * Probabilities 2. * Probabilities 1. * Probabilities &amp; Statistics. ## Université Paris 13 ### 2010--2014 * Data mining, Master 1. * Probabilities &amp; Statistics, Master 1. * Introduction to programming, C...">
   
 
   
@@ -245,7 +245,7 @@
 <h3 id="since-2014">Since 2014</h3>
 
 <ul>
-  <li>Machine Learning.</li>
+  <li>Machine Learning. (<a href="../ML_course/index.html">Course</a>)</li>
   <li>Statistical inference.</li>
   <li>Probabilities 2.</li>
   <li>Probabilities 1.</li>
