--- a/publications/index.html
+++ b/publications/index.html
@@ -52,7 +52,9 @@
   
 
    
-  <meta property="og:description" content="## Journal articles
+  <meta property="og:description" content="My [Google Scholar](https://scholar.google.com/citations?user=rqfVsosAAAAJ) page.
+
+## Journal articles
 
 {% bibliography --query @article[status!=editorial &amp;&amp; status!=other] %}
 
@@ -92,7 +94,9 @@
   
 
   
-  <meta name="twitter:description" content="## Journal articles
+  <meta name="twitter:description" content="My [Google Scholar](https://scholar.google.com/citations?user=rqfVsosAAAAJ) page.
+
+## Journal articles
 
 {% bibliography --query @article[status!=editorial &amp;&amp; status!=other] %}
 
@@ -251,7 +255,9 @@
 <div class="container" role="main">
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-      <h2 id="journal-articles">Journal articles</h2>
+      <p>My <a href="https://scholar.google.com/citations?user=rqfVsosAAAAJ">Google Scholar</a> page.</p>
+
+<h2 id="journal-articles">Journal articles</h2>
 
 <ol class="bibliography"><li><span id="Benamar16-journal"><span style="font-variant: small-caps">Benamar, L., Balagué, C., and Ghassany, M.</span> 2016. The Identification and Influence of Social Roles in a Social Media Product Community : a Systemic Approach. <i>(submitted)</i>.</span>
 
