--- a/publications/index.html
+++ b/publications/index.html
@@ -75,12 +75,12 @@
   <meta property="og:type" content="website" />
 
   
-  <meta property="og:url" content="http://mghassany.github.io/publications/" />
-  <link rel="canonical" href="http://mghassany.github.io/publications/" />
+  <meta property="og:url" content="http://mghassany.com/publications/" />
+  <link rel="canonical" href="http://mghassany.com/publications/" />
   
 
   
-  <meta property="og:image" content="http://mghassany.github.io/img/mypic.png" />
+  <meta property="og:image" content="http://mghassany.com/img/mypic.png" />
   
   
 
@@ -114,7 +114,7 @@
   
 
   
-  <meta name="twitter:image" content="http://mghassany.github.io/img/mypic.png" />
+  <meta name="twitter:image" content="http://mghassany.com/img/mypic.png" />
   
 
 </head>
@@ -132,7 +132,7 @@
         <span class="icon-bar"></span>
       </button>
 <!--       remove navbar-brand to remove name in order to put photo on left
- --><!--       <a class="navbar-brand" href="http://mghassany.github.io">Mohamad Ghassany</a>
+ --><!--       <a class="navbar-brand" href="http://mghassany.com">Mohamad Ghassany</a>
  -->    </div>
 
     <div class="collapse navbar-collapse" id="main-navbar">
@@ -214,7 +214,7 @@
 	
 	<div class="avatar-container">
 	  <div class="avatar-img-border">
-	    <a href="http://mghassany.github.io ">
+	    <a href="http://mghassany.com ">
 	      <img class="avatar-img" src="/img/mypic.png" />
 		</a>
 	  </div>
