--- a/index.html
+++ b/index.html
@@ -2,8 +2,43 @@
 layout: page
 title: Mohamad Ghassany
 subtitle: Researcher - Teacher - Data Scientist
+css: "/css/aboutme.css"
 ---
 
 
-{% markdown aboutme.md %}
+<div id="aboutme-section">
+<h1 id="bio">Brief Bio</h1>
 
+<p class="about-text">
+<span class="fa fa-briefcase about-icon" style="color:#00B4A1"></span>
+I am currently a research engineer in Computer Science at <a href="http://www.telecom-em.eu/">Télécom Management School</a> in Paris. I am also assistant professor at <a href="http://www.esilv.fr/">Leonard de Vinci Engineering School</a> where I teach Machine Learning, Probability and Statistics.<br>Previously, I was a post-doctoral researcher at <a href="http://www.lurpa.ens-cachan.fr/">LURPA</a>, <a href="http://www.ens-cachan.fr/">Ecole Normale Supérieure de Cachan</a>. 
+</p>
+
+<p class="about-text">
+<span class="fa fa-graduation-cap about-icon" style="color:#00B4A1"></span>
+I obtained my PhD (Nov. 2013) in Computer Science from <a href="https://www.univ-paris13.fr/">Université Paris 13</a>, where I worked in <a href="http://lipn.univ-paris13.fr/en/a3-presentation">A3</a> team of <a href="http://lipn.univ-paris13.fr/en/">LIPN</a> under the supervision of Professor <a href="https://lipn.univ-paris13.fr/~bennani/">Younès Bennani</a>.<br>
+I obtained my MS in Applied Mathematics & Statistics from <a href="http://www.univ-grenoble-alpes.fr/en/">Université Grenoble Alpes</a>.
+</p>
+
+</div>
+
+<div id="contactme-section">
+<h2 id="contact">Contact</h2>
+
+
+<form method="POST" action="http://formspree.io/m.ghassany@gmail.com" class="form" id="contact-form">
+<p>You can <a href="mailto:m.ghassany@gmail.com?subject=Hello from mghassany.com">email me</a> or send me a quick message using the form below:</p>
+  <div class="row">
+    <div class="col-xs-6">
+      <input type="email" name="_replyto" class="form-control input-lg" placeholder="Your Email" title="Email">
+    </div>
+    <div class="col-xs-6">
+      <input type="text" name="name" class="form-control input-lg" placeholder="Your Name" title="Name">
+    </div>
+  </div>  
+  <input type="hidden" name="_subject" value="New submission from mghassany.com">
+<textarea type="text" name="content" class="form-control input-lg" placeholder="Message" title="Message" required="required" rows="3"></textarea>
+    <input type="text" name="_gotcha" style="display:none">
+  <button type="submit" class="btn btn-lg btn-primary">Send</button>
+</form>
+</div>
