--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@ I obtained my MS in Applied Mathematics & Statistics from <a href="http://www.un
   </div>  
   <input type="hidden" name="_subject" value="New submission from mghassany.com">
 <textarea type="text" name="content" class="form-control input-lg" placeholder="Message" title="Message" required="required" rows="3"></textarea>
-    <input type="text" name="_gotcha" style="display:none">
+  <input type="text" name="_gotcha" style="display:none">
+  <input type="hidden" name="_next" value="message" />
   <button type="submit" class="btn btn-lg btn-primary">Send</button>
 </form>
 </div>
