--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@ I obtained my MS in Applied Mathematics & Statistics from <a href="http://www.un
 <textarea type="text" name="content" class="form-control input-lg" placeholder="Message" title="Message" required="required" rows="3"></textarea>
   <input type="text" name="_gotcha" style="display:none">
   <input type="hidden" name="_next" value="message" />
-  <button type="submit" class="btn btn-lg btn-primary">Send</button>
+  <button type="submit" class="btn btn-lg btn-primary" color="#00b4a1">Send</button>
 </form>
 </div>
