--- a/research/index.html
+++ b/research/index.html
@@ -52,7 +52,7 @@
   
 
    
-  <meta property="og:description" content="## Projects ### Curated Media Projet FUI 17. Projet de plateforme de qualification de données issues du web à grande échelle. Ce projet est en partenariat avec Linkfluence, Intercloud, CEA list, Tigerlily, youmag. ### Sodatech Création d’une plateforme de Big Data pour faire du monitoring et établir des mesures des...">
+  <meta property="og:description" content="## Projects ### Curated Media Projet FUI 17. Projet de plateforme de qualification de données issues du web à grande échelle. Ce projet est en partenariat avec Linkfluence, Intercloud, CEA list, Tigerlily, youmag. * *Missions*: + Test and evaluation of Radarly. + Collect data from the web using Radarly. +...">
   
 
 
@@ -78,7 +78,7 @@
   
 
   
-  <meta name="twitter:description" content="## Projects ### Curated Media Projet FUI 17. Projet de plateforme de qualification de données issues du web à grande échelle. Ce projet est en partenariat avec Linkfluence, Intercloud, CEA list, Tigerlily, youmag. ### Sodatech Création d’une plateforme de Big Data pour faire du monitoring et établir des mesures des...">
+  <meta name="twitter:description" content="## Projects ### Curated Media Projet FUI 17. Projet de plateforme de qualification de données issues du web à grande échelle. Ce projet est en partenariat avec Linkfluence, Intercloud, CEA list, Tigerlily, youmag. * *Missions*: + Test and evaluation of Radarly. + Collect data from the web using Radarly. +...">
   
 
   
@@ -230,16 +230,61 @@
 <p>Projet FUI 17. Projet de plateforme de qualification de données issues du web à grande échelle.
 Ce projet est en partenariat avec Linkfluence, Intercloud, CEA list, Tigerlily, youmag.</p>
 
+<ul>
+  <li><em>Missions</em>:
+    <ul>
+      <li>Test and evaluation of Radarly.</li>
+      <li>Collect data from the web using Radarly.</li>
+      <li>Data filtering and preprocessing.</li>
+      <li>Data analysis (working on cascade segmentation actually).</li>
+    </ul>
+  </li>
+  <li><em>Softwares and Langages</em>: R
+    <ul>
+      <li>Using my favorite R IDE: Rstudio.</li>
+      <li>Most used libraries: data.table, dplyr, reshape2, ggplot2,  plotly,  knitr, pander and rmarkdown to build beautiful reports and work summaries (html_notebooks).</li>
+    </ul>
+  </li>
+</ul>
+
 <h3 id="sodatech">Sodatech</h3>
 
 <p>Création d’une plateforme de Big Data pour faire du monitoring et établir des mesures des réseaux
 sociaux en temps réel. Création d’un outil de visualisation dynamique et interactive des réseaux
 sociaux. Ce projet regroupe trois partenaires : IMT, 1000Mercis, ENS Cachan.</p>
 
+<ul>
+  <li><em>Missions</em>:
+    <ul>
+      <li>Constact graphs from crawled social networks data (Facebook,  Twitter and Instagram)</li>
+      <li>Compute network structures for the constracted graphs.</li>
+      <li>Integrate the visualizatio to the Sodata plateform.</li>
+    </ul>
+  </li>
+  <li><em>Softwares and Langages</em>:
+    <ul>
+      <li>MongoDB,  Pig,  Javascript,  Django (Python),  Shell scripts,  Gephi,  Spark.</li>
+    </ul>
+  </li>
+</ul>
+
 <h3 id="open-food-system">Open Food System</h3>
 
 <p>Projet de recherche porté par SEB autour de la transformation digitale du secteur de la cuisine,
 qui regroupe vingt partenaires industriels et laboratoires de recherche.</p>
+
+<ul>
+  <li><em>Missions</em>:
+    <ul>
+      <li>Graph analysis of Facebook group in order to analyse detected social roles.</li>
+    </ul>
+  </li>
+  <li><em>Softwares and Langages</em>:
+    <ul>
+      <li>Gephi, MongoDB,  <a href="https://github.com/oxfordinternetinstitute/InteractiveVis/tree/master/network">interactivevis</a> (beautiful interactive visualisation of network data).</li>
+    </ul>
+  </li>
+</ul>
 
 <h3 id="angel">ANGEL</h3>
 
@@ -247,11 +292,43 @@ qui regroupe vingt partenaires industriels et laboratoires de recherche.</p>
 pôles SYSTEMATIC PARIS REGION, VIAMECA et ASTECH, a pour objectif de développer un
 système logiciel pour l’Industrialisation Optimisée Intelligente de l’Usinage.</p>
 
+<p>Project funded by the minister of.</p>
+
+<ul>
+  <li><em>Missions</em>:
+    <ul>
+      <li>Apply data mining techniques to usinage smart manufacturing.</li>
+      <li>shape detection</li>
+      <li>Techniques used: regression, neural networks,  kmeans,  gaussian mixtures,  variational gaussian mixtures.</li>
+    </ul>
+  </li>
+  <li><em>Softwares and Langages</em>:
+    <ul>
+      <li>Matlab</li>
+    </ul>
+  </li>
+</ul>
+
 <h3 id="coclico">COCLICO</h3>
 
 <p>Coclico est un projet de recherche ANR visant à étudier et proposer une méthode générique
 innovante permettant une analyse multi-échelle de grands volumes de données spatio-temporelles
 fournies en continue de qualité très variable.</p>
+
+<p>Collaborative clustering of large scale spatio-temporal data.</p>
+
+<ul>
+  <li><em>Keywords</em>:
+    <ul>
+      <li>Fuzzy Clustering.</li>
+      <li>Som</li>
+      <li>GtM</li>
+      <li>Variational Inference.</li>
+      <li>Variational Bayesian GTM.</li>
+    </ul>
+  </li>
+</ul>
+
 
 	    
     </div>
@@ -352,6 +429,17 @@ fournies en continue de qualité très variable.</p>
   
 
 
+
+	<!-- Google Analytics -->
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		ga('create', 'UA-88489172-1', 'auto');
+		ga('send', 'pageview');
+	</script>
+	<!-- End Google Analytics -->
 
 
   
