--- a/teaching/index.html
+++ b/teaching/index.html
@@ -52,7 +52,7 @@
   
 
    
-  <meta property="og:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. ([Course](../ML_course/index.html)) * Statistical inference. * Probabilities 2. * Probabilities 1. * Probabilities &amp; Statistics. ## Université Paris 13 ### 2010--2014 * Data mining, Master 1. * Probabilities &amp; Statistics, Master 1. * Introduction to programming, C...">
+  <meta property="og:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. + Prepared by me for Spring 16-17: [Course repository](../ML_course/index.html &quot;Introduction to Machine Learning -- Spring 16-17&quot;). * Probabilities &amp; Statistics. + Prepared by me for Spring 16-17: Course, Exercices. + Fall 16-17 Spring 15-16 Fall 15-16...">
   
 
 
@@ -78,7 +78,7 @@
   
 
   
-  <meta name="twitter:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. ([Course](../ML_course/index.html)) * Statistical inference. * Probabilities 2. * Probabilities 1. * Probabilities &amp; Statistics. ## Université Paris 13 ### 2010--2014 * Data mining, Master 1. * Probabilities &amp; Statistics, Master 1. * Introduction to programming, C...">
+  <meta name="twitter:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. + Prepared by me for Spring 16-17: [Course repository](../ML_course/index.html &quot;Introduction to Machine Learning -- Spring 16-17&quot;). * Probabilities &amp; Statistics. + Prepared by me for Spring 16-17: Course, Exercices. + Fall 16-17 Spring 15-16 Fall 15-16...">
   
 
   
@@ -228,11 +228,34 @@
 <h3 id="since-2014">Since 2014</h3>
 
 <ul>
-  <li>Machine Learning. (<a href="../ML_course/index.html">Course</a>)</li>
-  <li>Statistical inference.</li>
-  <li>Probabilities 2.</li>
-  <li>Probabilities 1.</li>
-  <li>Probabilities &amp; Statistics.</li>
+  <li>Machine Learning.
+    <ul>
+      <li>Prepared by me for Spring 16-17: <a href="../ML_course/index.html" title="Introduction to Machine Learning -- Spring 16-17">Course repository</a>.</li>
+    </ul>
+  </li>
+  <li>Probabilities &amp; Statistics.
+    <ul>
+      <li>Prepared by me for Spring 16-17: Course,  Exercices.</li>
+      <li>
+        <ul class="list-inline">
+    <li> Fall 16-17 <a target="_blank" href="../documents/proba-fall-16-17.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i></a></li>
+    <li>Spring 15-16 <a target="_blank" href="../documents/proba-spring-15-16.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i></a></li>
+    <li>Fall 15-16 <a target="_blank" href="../documents/proba-fall-15-16.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i></a></li>
+    <li>Spring 14-15 <a target="_blank" href="../documents/proba-spring-14-15.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i></a></li>
+  </ul>
+      </li>
+    </ul>
+  </li>
+  <li>Statistical inference.
+    <ul>
+      <li>Fall 15-16 <a target="_blank" href="../documents/stat-inf-fall-15-16.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i></a></li>
+    </ul>
+  </li>
+  <li>Descriptive Statistics.
+    <ul>
+      <li>Fall 16-17 <a target="_blank" href="../documents/stat-desc-fall-16-17.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i></a></li>
+    </ul>
+  </li>
 </ul>
 
 <h2 id="universit-paris-13">Université Paris 13</h2>
@@ -367,6 +390,17 @@
   
 
 
+
+	<!-- Google Analytics -->
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		ga('create', 'UA-88489172-1', 'auto');
+		ga('send', 'pageview');
+	</script>
+	<!-- End Google Analytics -->
 
 
   
