--- a/research/index.html
+++ b/research/index.html
@@ -52,7 +52,7 @@
   
 
    
-  <meta property="og:description" content="## Projects ### Curated Media Projet FUI 17. Projet de plateforme de qualification de données issues du web à grande échelle. Ce projet est en partenariat avec Linkfluence, Intercloud, CEA list, Tigerlily, youmag. * *Missions*: + Test and evaluation of Radarly. + Collect data from the web using Radarly. +...">
+  <meta property="og:description" content="## Projects ### Sodatech Création d’une plateforme de Big Data pour faire du monitoring et établir des mesures des réseaux sociaux en temps réel. Création d’un outil de visualisation dynamique et interactive des réseaux sociaux. Creation of [Sodata](site chaire): a Big Data Plateform to collect and visualize data from social...">
   
 
 
@@ -78,7 +78,7 @@
   
 
   
-  <meta name="twitter:description" content="## Projects ### Curated Media Projet FUI 17. Projet de plateforme de qualification de données issues du web à grande échelle. Ce projet est en partenariat avec Linkfluence, Intercloud, CEA list, Tigerlily, youmag. * *Missions*: + Test and evaluation of Radarly. + Collect data from the web using Radarly. +...">
+  <meta name="twitter:description" content="## Projects ### Sodatech Création d’une plateforme de Big Data pour faire du monitoring et établir des mesures des réseaux sociaux en temps réel. Création d’un outil de visualisation dynamique et interactive des réseaux sociaux. Creation of [Sodata](site chaire): a Big Data Plateform to collect and visualize data from social...">
   
 
   
@@ -225,10 +225,38 @@
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
       <h2 id="projects">Projects</h2>
 
+<h3 id="sodatech">Sodatech</h3>
+
+<p>Création d’une plateforme de Big Data pour faire du monitoring et établir des mesures des réseaux
+sociaux en temps réel. Création d’un outil de visualisation dynamique et interactive des réseaux
+sociaux.</p>
+
+<p>Creation of <a href="site chaire">Sodata</a>: a Big Data Plateform to collect and visualize data from social networks such as Facebook,  Twitter &amp;  Instagram.</p>
+
+<p>Partners: 1000Mercis, ENS Cachan.</p>
+
+<ul>
+  <li><em>Missions</em>:
+    <ul>
+      <li>Constact graphs from crawled social networks data (Facebook,  Twitter and Instagram)</li>
+      <li>Compute network structures for the constracted graphs.</li>
+      <li>Integrate the visualizatio to the Sodata plateform.</li>
+    </ul>
+  </li>
+  <li><em>Softwares and Langages</em>:
+    <ul>
+      <li>MongoDB,  Pig,  Javascript,  Django (Python),  Shell scripts,  Gephi,  Spark.</li>
+    </ul>
+  </li>
+</ul>
+
 <h3 id="curated-media">Curated Media</h3>
 
-<p>Projet FUI 17. Projet de plateforme de qualification de données issues du web à grande échelle.
-Ce projet est en partenariat avec Linkfluence, Intercloud, CEA list, Tigerlily, youmag.</p>
+<p>Projet FUI 17. Projet de plateforme de qualification de données issues du web à grande échelle.</p>
+
+<p>Project funded by the french minister of.. I dont know what is the objective of this project.</p>
+
+<p>Partners:  Linkfluence, Intercloud, CEA list, Tigerlily, youmag.</p>
 
 <ul>
   <li><em>Missions</em>:
@@ -243,27 +271,6 @@ Ce projet est en partenariat avec Linkfluence, Intercloud, CEA list, Tigerlily, 
     <ul>
       <li>Using my favorite R IDE: Rstudio.</li>
       <li>Most used libraries: data.table, dplyr, reshape2, ggplot2,  plotly,  knitr, pander and rmarkdown to build beautiful reports and work summaries (html_notebooks).</li>
-    </ul>
-  </li>
-</ul>
-
-<h3 id="sodatech">Sodatech</h3>
-
-<p>Création d’une plateforme de Big Data pour faire du monitoring et établir des mesures des réseaux
-sociaux en temps réel. Création d’un outil de visualisation dynamique et interactive des réseaux
-sociaux. Ce projet regroupe trois partenaires : IMT, 1000Mercis, ENS Cachan.</p>
-
-<ul>
-  <li><em>Missions</em>:
-    <ul>
-      <li>Constact graphs from crawled social networks data (Facebook,  Twitter and Instagram)</li>
-      <li>Compute network structures for the constracted graphs.</li>
-      <li>Integrate the visualizatio to the Sodata plateform.</li>
-    </ul>
-  </li>
-  <li><em>Softwares and Langages</em>:
-    <ul>
-      <li>MongoDB,  Pig,  Javascript,  Django (Python),  Shell scripts,  Gephi,  Spark.</li>
     </ul>
   </li>
 </ul>
