--- a/research/index.html
+++ b/research/index.html
@@ -254,7 +254,7 @@ sociaux.</p>
 
 <p>Projet FUI 17. Projet de plateforme de qualification de données issues du web à grande échelle.</p>
 
-<p>Project funded by the french minister of.. I dont know what is the objective of this project.</p>
+<!-- Project funded by the french minister of.. -->
 
 <p>Partners:  Linkfluence, Intercloud, CEA list, Tigerlily, youmag.</p>
 
