--- a/bibliography/mybiblio/index.html
+++ b/bibliography/mybiblio/index.html
@@ -208,13 +208,13 @@
 
 <p>Ghassany, M., Grozavu, N., &amp; Bennani, Y. (2012). Collaborative Generative Topographic Mapping. In <i>Neural Information Processing: 19th International Conference, ICONIP 2012, Doha, Qatar</i>.</p>
 
-<p>Ghassany, M., Grozavu, N., &amp; Bennani, Y. (2012). Collaborative Clustering Using Prototype-Based Techniques. <i>International Journal of Computational Intelligence and Applications</i>, <i>11</i>. Retrieved from http://www.worldscientific.com/doi/abs/10.1142/S1469026812500174</p>
+<p>Ghassany, M., Grozavu, N., &amp; Bennani, Y. (2012). Collaborative Clustering Using Prototype-Based Techniques. <i>International Journal Of Computational Intelligence and Applications</i>, <i>11</i>. Retrieved from http://www.worldscientific.com/doi/abs/10.1142/S1469026812500174</p>
 
 <p>Grozavu, N., Ghassany, M., &amp; Bennani, Y. (2011). Learning confidence exchange in Collaborative Clustering. In <i>The 2011 International Joint Conference on Neural Networks, IJCNN11, San Jose, CA, USA</i>.</p>
 
 <p>Ghassany, M. (2013). <i>Contributions to Collaborative Clustering</i> (PhD thesis).</p>
 
-<p>Ghassany, M., &amp; Bennani, Y. (2015). Collaborative Fuzzy Clustering of Variational Bayesian Generative Topographic Mapping. <i>International Journal of Computational Intelligence and Applications</i>, <i>14</i>. Retrieved from http://www.worldscientific.com/doi/abs/10.1142/S1469026815500017</p>
+<p>Ghassany, M., &amp; Bennani, Y. (2015). Collaborative Fuzzy Clustering of Variational Bayesian Generative Topographic Mapping. <i>International Journal Of Computational Intelligence and Applications</i>, <i>14</i>. Retrieved from http://www.worldscientific.com/doi/abs/10.1142/S1469026815500017</p>
 
 <p>Grozavu, N., Ghassany, M., &amp; Bennani, Y. (2011). Apprentissage de la confiance des échanges en classification collaborative non supervisée. In <i>7e Plateforme AFIA, Association Française pour l’Intelligence Artificielle, Chambéry, 16 au 20 mai 2011</i> (p. 217). Editions Publibook.</p>
 
